force-app/main/default/objects/Post_Sales_Config_Master__c/Post_Sales_Config_Master__c.object-meta.xml
<CustomObject>
    <label>Post Sales Config Master</label>
    <nameField>
        <displayFormat>PSCM-{0000}</displayFormat>
        <label>Config Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Sales Config Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>