force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Cancellation_Mail_Days__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Mail_Days__c</fullName>
    <defaultValue>45</defaultValue>
    <description>Days after due date to trigger cancellation mail</description>
    <label>Cancellation Mail (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>