force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Cancellation_Object__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Object__c</fullName>
    <description>Object against which cancellation mail is configured</description>
    <label>Cancellation Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking__c</fullName>
                <default>true</default>
                <label>Booking</label>
            </value>
            <value>
                <fullName>Demands__c</fullName>
                <label>Demand</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>