force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Name__c</fullName>
    <label>Configuration Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>