force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Due_Date_Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Offset_Days__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Offset days for calculating demand due dates</description>
    <label>Due Date Offset (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>