force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Enable_Auto_Demand__c.field-meta.xml
<CustomField>
    <fullName>Enable_Auto_Demand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically raise demands based on payment schedule due dates</description>
    <label>Enable Auto Demand Raising</label>
    <type>Checkbox</type>
</CustomField>