force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Enable_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Enable_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/disable automatic cancellation mail processing</description>
    <label>Enable Cancellation Mail</label>
    <type>Checkbox</type>
</CustomField>