force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Enable_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Enable_Reminders__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable/disable the demand reminder system</description>
    <label>Enable Demand Reminders</label>
    <type>Checkbox</type>
</CustomField>