force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Enable_Unit_Unblocking__c.field-meta.xml
<CustomField>
    <fullName>Enable_Unit_Unblocking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/disable automatic unit unblocking</description>
    <label>Enable Unit Unblocking</label>
    <type>Checkbox</type>
</CustomField>