force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Grace_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Days__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Grace period in days before a payment is considered overdue</description>
    <label>Grace Period (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>