force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Include_Interest__c.field-meta.xml
<CustomField>
    <fullName>Include_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to include interest in demand calculations</description>
    <label>Include Interest</label>
    <type>Checkbox</type>
</CustomField>