force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>Annual interest rate percentage for overdue calculations</description>
    <label>Interest Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>