force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Payment_Schedule_Source__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Source__c</fullName>
    <description>Source for generating payment schedules - Master Payment Schedule or Cost Sheet children</description>
    <label>Payment Schedule Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master Payment Schedule</fullName>
                <default>true</default>
                <label>Master Payment Schedule</label>
            </value>
            <value>
                <fullName>Cost Sheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>