force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Reminder_1_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_1_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Days after due date to send 1st demand reminder</description>
    <label>1st Reminder (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>