force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Reminder_1_Document__c.field-meta.xml
<CustomField>
    <fullName>Reminder_1_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Document template for 1st demand reminder</description>
    <label>1st Reminder Document</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Config Masters (Reminder 1)</relationshipLabel>
    <relationshipName>Config_Masters_Reminder1</relationshipName>
    <type>Lookup</type>
</CustomField>