force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Reminder_1_Object__c.field-meta.xml
<CustomField>
    <fullName>Reminder_1_Object__c</fullName>
    <description>Object against which the 1st reminder is configured</description>
    <label>1st Reminder Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking__c</fullName>
                <default>true</default>
                <label>Booking</label>
            </value>
            <value>
                <fullName>Demands__c</fullName>
                <label>Demand</label>
            </value>
            <value>
                <fullName>Payment_Schedule__c</fullName>
                <label>Payment Schedule</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>