force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Reminder_2_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_2_Days__c</fullName>
    <defaultValue>14</defaultValue>
    <description>Days after due date to send 2nd demand reminder</description>
    <label>2nd Reminder (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>