force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Reminder_2_Document__c.field-meta.xml
<CustomField>
    <fullName>Reminder_2_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Document template for 2nd demand reminder</description>
    <label>2nd Reminder Document</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Config Masters (Reminder 2)</relationshipLabel>
    <relationshipName>Config_Masters_Reminder2</relationshipName>
    <type>Lookup</type>
</CustomField>