force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Reminder_3_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_3_Days__c</fullName>
    <defaultValue>21</defaultValue>
    <description>Days after due date to send 3rd demand reminder</description>
    <label>3rd Reminder (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>