force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Reminder_3_Document__c.field-meta.xml
<CustomField>
    <fullName>Reminder_3_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Document template for 3rd demand reminder</description>
    <label>3rd Reminder Document</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Config Masters (Reminder 3)</relationshipLabel>
    <relationshipName>Config_Masters_Reminder3</relationshipName>
    <type>Lookup</type>
</CustomField>