force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Unit_Unblocking_Days__c.field-meta.xml
<CustomField>
    <fullName>Unit_Unblocking_Days__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Days after due date to trigger unit unblocking</description>
    <label>Unit Unblocking (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>