force-app/main/default/objects/Post_Sales_Config_Master__c/fields/Unit_Unblocking_Object__c.field-meta.xml
<CustomField>
    <fullName>Unit_Unblocking_Object__c</fullName>
    <description>Object against which unit unblocking is configured</description>
    <label>Unit Unblocking Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking__c</fullName>
                <default>true</default>
                <label>Booking</label>
            </value>
            <value>
                <fullName>Unit__c</fullName>
                <label>Unit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>